# wayland-info-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  USAGE.md
.github/: copilot-instructions.md
.github/workflows/: rust.yml
src/: app.rs  cli.rs  main.rs  output.rs
src/protocols/: mod.rs  registry.rs  treeland_output_manager.rs  wl_output.rs  wl_seat.rs  wl_shm.rs  wp_drm_lease_device.rs  wp_presentation.rs  xdg_output.rs
