[package]
name = "wayland-info-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of wayland-info for inspecting Wayland compositor globals and protocol capabilities."
license = "MIT"
readme = "README.md"
repository = "https://github.com/dwapp/wayland-info-rs"
homepage = "https://github.com/dwapp/wayland-info-rs"
documentation = "https://docs.rs/wayland-info-rs"

[dependencies]
colored = "3.0.0"
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.10", features = ["staging", "unstable", "client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
